fix align

--- a/src/components/ChooseYourOwnStory/ChooseYourOwnStory.scss
+++ b/src/components/ChooseYourOwnStory/ChooseYourOwnStory.scss
@@ -14,6 +14,7 @@ $menu-height: spacing(37.5);
       padding: 0 spacing(16);
       position: sticky;
       top: spacing(16);
+      display: block;
     }
   }
 
