--- a/src/components/OurPledge/OurPledge.scss
+++ b/src/components/OurPledge/OurPledge.scss
@@ -3,21 +3,34 @@
 .OurPledge {
   &__content-container {
     border-radius: radius('m');
-    padding: spacing(6) spacing(4);
-    flex-direction: column;
+    padding: spacing(4) spacing(4);
+    flex-direction: row;
+    justify-content: space-between;
 
     @media ($medium-up) {
       min-width: spacing(100);
-      padding: spacing(6) 0;
+      align-items: center;
+    }
+  }
+
+  &__text-content-container {
+    flex-direction: column;
+    align-items: flex-start;
+
+    @media ($medium-up) {
       flex-direction: row;
+      justify-content: space-between;
+      align-items: center;
     }
   }
 
   &__text-description {
-    margin: spacing(4) 0;
+    text-align: left;
     font-size: $font-1;
+    margin-top: spacing(1);
 
     @media ($medium-up) {
+      text-align: center;
       margin: 0;
       padding: 0;
     }
